--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ pid /tmp/nginx.pid;
 error_log /dev/stdout;
 
 events {
-  worker_connections 1024; # increase if you have lots of clients
+  worker_connections 2048; # increase if you have lots of clients
   accept_mutex off; # set to 'on' if nginx worker_processes > 1
   # 'use epoll;' to enable for Linux 2.6+
   # 'use kqueue;' to enable for FreeBSD, OSX
@@ -47,8 +47,8 @@ http {
     # auth_basic_user_file /etc/nginx/.htpasswd;
     
     ssl on;
-    ssl_certificate /etc/nginx/ssl/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/api.nexchange.io/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.nexchange.io/privkey.pem;
 
     
     # based on https://gist.github.com/bradmontgomery/6487319
@@ -57,7 +57,7 @@ http {
 
 
     # the domain name it will serve for
-    server_name staging.nexchange.ru nexchange.ru www.nexchange.ru staging.nexchange.co.uk nexchange.co.uk www.nexchange.co.uk;  # site public FQDN
+    server_name api.nexchange.io;  # site public FQDN
     charset     utf-8;
 
     # max upload size
